# os-labs

lab1/: app.sh  app.sh~  core.sh  errors.sh  errors.sh~  interactive.sh  man.txt  utils.sh  utils.sh~
lab1/modules/: calc.sh  log.sh  reverse.sh  search.sh  strlen.sh
lab2/: settings.gradle
lab2/client/: build.gradle
lab2/client/src/main/java/os/client/: Main.java
lab2/server/: build.gradle
lab2/server/src/main/cpp/: os_server_Domain.cpp  os_server_Socket.cpp  os_server_SocketType.cpp
lab2/server/src/main/java/os/logger/: LoggerReceiver.java  LoggerSender.java
lab2/server/src/main/java/os/server/: Domain.java  Main.java  Request.java  RequestMethod.java  Response.java  ResponseStatus.java  Server.java  Socket.java  SocketAddress.java  SocketType.java
lab2/server/src/main/java/os/socket/: Socket.java  SocketAddress.java  SocketType.java
lab2/utils/: .gitignore  build.gradle
lab2/utils/src/main/cpp/: CMakeLists.txt  os_memory_SharedMemory.cpp  os_process_CurrentProcess.cpp  os_process_Mutex.cpp  os_process_Pipe.cpp  os_process_Process.cpp  os_process_Runtime.cpp  os_process_Signal.cpp  os_server_Socket.cpp  os_socket_ClientSocket.cpp  os_socket_Domain.cpp  os_socket_InetSocketAddress.cpp  os_socket_ServerSocket.cpp  os_socket_Socket.cpp  os_socket_SocketType.cpp
lab2/utils/src/main/java/os/memory/: SharedMemory.java
lab2/utils/src/main/java/os/process/: CurrentProcess.java  Mutex.java  Pipe.java  Process.java  Runtime.java  Signal.java
lab3/: build.gradle
lab3/src/main/java/os/diskimg/: Program.java
lab3/src/main/java/os/diskimg/util/: Len.java  (+7 more)
(+32 files in other folders)
